--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -34,14 +34,21 @@
 
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" id="home" href="/">Home</a>
+          <a class="nav-item nav-link" id="home" href="/home">Home</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
+          <a class="nav-item nav-link" id="login" href="/">Login</a>
+          <a class="nav-item nav-link" id="adduser" href="/adduser">Add User</a>
         </div>
       </div>
     </nav>
 
-    
+    <!--allows content to be identified by each page-->
+    <div class="container">
+        {% block content%}
+        {%endblock%}
+    </div>
+
+
     <!--Javascript functions imported for CSS framework-->
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
