--- a/Website/templates/adduser.html
+++ b/Website/templates/adduser.html
@@ -46,14 +46,24 @@
             placeholder="Confirm password"
         />
     </div>
-    <div class="form-group">
-        <label for="user_status"> Is user an elevated user?</label>
+    <div class="form-check">
         <input
             type="checkbox"
             class="form-check-input"
             id="user_status"
             name="user_status"
-            placeholder="Is user an elevated user?"
+        />
+        <label for="user_status"> Elevated user </label>
+    </div>
+    <br /><br />
+    <div class="form-group">
+        <label for="adminpassword"> Confirm by entering admin password</label>
+        <input
+            type="password"
+            class="form-control"
+            id="adminpassword"
+            name="adminpassword"
+            placeholder="Confirm admin password"
         />
     </div>
 
