--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -1,4 +1,34 @@
 {% extends "base.html" %}
 {% block title %}Login{% endblock %}
 
-{% block content%} <h1> This is the login page</h1>{%endblock%}
+{% block content%}
+<form method="POST">
+    <h3 align="center"> Login</h3>
+    <!--Form for the login-->
+    <div class="form-group">
+        <label for="username"> User Name</label>
+        <input
+            type="text"
+            class="form-control"
+            id="username"
+            name="username"
+            placeholder="Enter username"
+        />
+    </div>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input
+            type="password"
+            class="form-control"
+            id="password"
+            name="password"
+            placeholder="Enter password"
+        />
+    </div>
+
+    <br />
+    <button type="submit" class="btn btn-primary">Login</button>
+
+
+</form>
+{%endblock%}
