--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -34,14 +34,19 @@
 
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
-          <a class="nav-item nav-link" id="adduser" href="/adduser">Add User</a>
+            <a class="nav-item nav-link" id="login" href="/login">Login</a>
+            <a class="nav-item nav-link" id="home" href="/">Home</a>
+            <a class="nav-item nav-link" id="adduser" href="/ticket">Ticket</a>
+            <a class="nav-item nav-link" id="user" href="/userpage">User</a>
+            <a class="nav-item nav-link" id="login" href="/admin">Admin</a>
+            <a class="nav-item nav-link" id="adduser" href="/adduser">Add User</a>
+            <a class="nav-item nav-link" id="logout" href="/chng">User Change</a>
+            <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
         </div>
       </div>
     </nav>
 
+    <!--Runs through the flash messages and displays a red or green alert for success or error-->
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
         {% for category, message in messages %}
