--- a/Website/templates/home.html
+++ b/Website/templates/home.html
@@ -1,4 +1,14 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 
-{% block content%} <h1> This is the homepage</h1>{%endblock%}
+{% block content%} <h1> This is the homepage</h1>
+
+    <!--TEMP Delete befor production-->
+    <h4 align="center"> This page will display the current list of open tickets with their ticket number, short description, date of last action</h4>
+    <br />
+    <P1 align="center"> Each ticket will have a button to open that specific ticket. Additionally there will be a query function to filter tickets on this page</P1>
+    <!--TEMP Delete befor production-->    
+
+
+{%endblock%}
+
