--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -4,6 +4,13 @@
 {% block content%}
 <form method="POST">
     <h3 align="center"> Login</h3>
+
+
+    <!--TEMP Delete befor production-->
+    <h4 align="center"> This page is the login page. For testing purposes a.admin:adminadmin is a valid stored entry</h4>
+    <!--TEMP Delete befor production-->
+
+
     <!--Form for the login-->
     <div class="form-group">
         <label for="username"> User Name</label>
