--- a/Website/templates/chng.html
+++ b/Website/templates/chng.html
@@ -8,6 +8,7 @@
     <!--TEMP Delete befor production-->    
     <br />
     <br />
+    <!--todo: add all editing functions for the accounts-->
     <h4>
         User ID: {{usr.id}} <br>
         Username: {{usr.username}}<br>
