--- a/Website/templates/home.html
+++ b/Website/templates/home.html
@@ -10,6 +10,7 @@
     <!--TEMP Delete befor production-->    
     <br />
     <br />
+    <!--Runs through each ticket and prints a list item for them and presents a button to open their page-->
     <h3> Current Tickets</h3>
     <ul class="list-group list-group-flush" id="tickets">
         {% for ticket in tickets%}
