--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -7,7 +7,7 @@
 
 
     <!--TEMP Delete befor production-->
-    <h4 align="center"> This page is the login page. For testing purposes a.admin:adminadmin is a valid stored entry</h4>
+    <h4 align="center"> This page is the login page. For testing purposes a.admin:adminadmin and u.user:useruser are valid stored accounts. Some functionality is different for each.</h4>
     <!--TEMP Delete befor production-->
 
 
