--- a/Website/templates/ticket.html
+++ b/Website/templates/ticket.html
@@ -68,7 +68,8 @@
 
         <h3 align="center"> Entries</h3>
 
-        <!-- Text area for note entry-->
+        <!-- Text area for note entry
+        -todo-  display all notes associated to this ticket-->
         <textarea name="note" id="note" class="form-control"></textarea>
         <br />
         <div align="center">
