--- a/Website/templates/adduser.html
+++ b/Website/templates/adduser.html
@@ -61,7 +61,7 @@
             id="user_status"
             name="user_status"
         />
-        <label for="user_status"> Elevated user </label>
+        <label for="user_status"> Admin user </label>
     </div>
     <br /><br />
     <div class="form-group">
