--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -31,6 +31,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
+      <!-- Displaying the navbar. Some functionality different if an admin or not-->
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
             {% if user.is_authenticated %}
@@ -39,7 +40,6 @@
             <a class="nav-item nav-link" id="adduser" href="/ticket">New Ticket</a>
             {% if user.user_status == 2 %}
             <a class="nav-item nav-link" id="login" href="/admin">Admin</a>
-            <a class="nav-item nav-link" id="adduser" href="/adduser">Add User</a>
             {% endif %}
 
             <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
