--- a/Website/templates/login.html
+++ b/Website/templates/login.html
@@ -3,13 +3,11 @@
 
 {% block content%}
 <form method="POST">
-    <h3 align="center"> Login</h3>
-
-
-    <!--TEMP Delete befor production-->
-    <h4 align="center"> This page is the login page. For testing purposes a.admin:adminadmin and u.user:useruser are valid stored accounts. Some functionality is different for each.</h4>
-    <!--TEMP Delete befor production-->
-
+    <br>
+    <h2 align="center"> Coop IT Solutions</h2>
+    <br><br>
+    <h5 align="Left"> Please login</h5>
+    <br>
 
     <!--Form for the login-->
     <div class="form-group">
