--- a/Website/templates/userpage.html
+++ b/Website/templates/userpage.html
@@ -1,26 +1,73 @@
 {% extends "base.html" %}
 {% block title %}User page{% endblock %}
 
-{% block content%} <h1> This is the user page</h1>
+{% block content%} <h1> User Management</h1>
+ 
+    <br />
+    <br />
+    <!-- Displaying the user information-->
+    <div class="form-row align-items-center">
+        <div class="col-auto">
+          <label>User ID</label>
+          <input type="text" value = "{{user.id}}" readonly>
+        </div>
+        <div class="col-auto">
+            <label>Username</label>
+            <input type="text" value = "{{user.username}}" readonly>
+          </div>
+          <div class="col-auto">
+            <label>User Status</label>
+            <input type="text" value = "{% if user.user_status == 0 %}Deactivated{% elif user.user_status == 1%}User{% elif user.user_status == 2%}Admin{% endif %}" readonly>
+          </div>
+      </div>
+      <div class="form-row align-items-center">
+        <div class="col-auto">
+            <label>First Name</label>
+            <input type="text" value = "{{user.fname}}" readonly>
+          </div>
+          <div class="col-auto">
+            <label>Last Name</label>
+            <input type="text" value = "{{user.lname}}" readonly>
+          </div>
+      </div>
 
-    <!--TEMP Delete befor production-->
-    <h4 align="center"> This page will display current user information and allow them to change their password</h4>
-    <!--TEMP Delete befor production-->    
-    <br />
-    <br />
-    <h4>
-        User ID: {{user.id}} <br>
-        Username: {{user.username}}<br>
-        First Name: {{user.fname}}<br>
-        Last Name: {{user.lname}}<br>
-        User Status: 
-        {% if user.user_status == 0 %}
-            Deactivated
-        {% elif user.user_status == 1%}
-            User
-        {% elif user.user_status == 2%}
-            Admin
-        {% endif %}
-    </h4>
+    <!--Section to change the current user's password-->
+    <br /><br /><br />
+        <form method="POST">
+            <h5 align="left"> Change Password </h5>
+            <div class="form-group">
+                <label for="currentpwd"> Current password </label>
+                <input
+                    type="password"
+                    class="form-control"
+                    id="currentpwd"
+                    name="currentpwd"
+                    placeholder="Enter Current password"
+                />
+            <br />
+            </div>
+            <div class="form-group">
+                <label for="password1"> New Password</label>
+                <input
+                    type="password"
+                    class="form-control"
+                    id="password1"
+                    name="password1"
+                    placeholder="Enter new password"
+                />
+            </div>
+            <div class="form-group">
+                <label for="password2"> Confirm Password</label>
+                <input
+                    type="password"
+                    class="form-control"
+                    id="password2"
+                    name="password2"
+                    placeholder="Confirm new password"
+                />
+            </div>
+            <br />
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
 
 {%endblock%}
