--- a/Website/templates/base.html
+++ b/Website/templates/base.html
@@ -20,7 +20,7 @@
     <!--Allows pyhton expressions to change the title across the website-->
     <title>{% block title %}Home{% endblock %}</title>
   </head>
-  <body>
+  <body style="background-color:rgba(0, 202, 255, 0.2)">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <!--Creates a toggle button for smaller windows-->
         <button
