--- a/Website/templates/adduser.html
+++ b/Website/templates/adduser.html
@@ -2,6 +2,7 @@
 {% block title %}Add User{% endblock %}
 
 {% block content%} 
+{% if user.user_status == 2%}
 <form method="POST">
     <h3 align="center"> Add User</h3>
     <!--Creating the form for a user to be added. Will ask for the first name, last name, 2 passwords to ensure it is correct, and if the user is an elevated user.
@@ -80,4 +81,10 @@
 
 
 </form>
+
+{%else%}
+<h1> Unable to access link. Please contact an Admin to troubleshoot </h1>
+{%endif%}
+
+
 {%endblock%}
